# MessageXchanger

./: .gitignore  ProjetoRC.rar  README.md  configIP.txt  i1_startup-config.cfg  i2_startup-config.cfg  i3_startup-config.cfg  relatorio_meta_1.docx  test  ~$latorio_meta_1.docx
MessageXChanger/: CMakeLists.txt  client.c  client.h  client_reg.txt  global.h  main.c  main.h  server.c  server.h
MessageXChanger/helpers/avl_tree/: avl_tree.c  avl_tree.h  sessions_avl.c  sessions_avl.h  users_avl.c  users_avl.h
MessageXChanger/helpers/client_reg_file_manager/: client_reg_file_ manager.c  client_reg_file_manager.c  client_reg_file_manager.h
MessageXChanger/helpers/client_reg_reader/: client_reg_reader.c  client_reg_reader.h
MessageXChanger/helpers/trees/: session_tree.c  session_tree.h  user_tree.c  user_tree.h
MessageXChanger/structs/: avl_node.h  request_msg.h  response_msg_t.h  user.c  user.h  user_session.h
MessageXChanger/tcp_ip/tcp/: tcp.c  tcp.h
MessageXChanger/tcp_ip/udp/: udp.c  udp.h
MessageXChanger/util/numbers/: numbers.c  numbers.h
MessageXChanger/util/read_line/: read_line.h
MessageXChanger/util/strings/: strings.c  strings.h
project/: Client  Server
project/helpers/client_reg_file_manager/: client_reg_file_manager.c
project/helpers/trees/: session_tree.c
project/projeto_GNS3/project-files/docker/3beee94e-87a5-4a3d-93fb-7a5cf59be626/home/: .gns3_perms
project/structs/: handshake_t.h  response_msg_t.h  session_tree_node_t.h  user.h  user_session.h  user_tree_node_t.h
project/tcp_ip/tcp/: tcp.h
project/tcp_ip/udp/: udp.h
project/util/msg_queue/: msg_queue.c
project/util/read_line/: read_line.c
project/util/strings/: strings.h
projeto_GNS3/: projeto_RC.gns3
projeto_GNS3/project-files/docker/085d7a0b-2665-4c77-b513-281af5c75cc8/etc/network/: interfaces
projeto_GNS3/project-files/docker/286a18f2-767e-490b-9e9a-3b24d6c80e80/etc/network/: .gns3_perms  interfaces
projeto_GNS3/project-files/docker/3beee94e-87a5-4a3d-93fb-7a5cf59be626/etc/network/: .gns3_perms  interfaces
projeto_GNS3/project-files/docker/7d9a8898-785e-4dcd-9131-13ef9d123d3b/etc/network/: interfaces
projeto_GNS3/project-files/docker/f2e006e1-6da5-4a84-9ff9-a57b133ee3b1/etc/network/: interfaces
projeto_GNS3/project-files/dynamips/: dynamips_i13_log.txt  dynamips_i14_log.txt  dynamips_i15_log.txt  dynamips_i16_log.txt  dynamips_i17_log.txt  dynamips_i18_log.txt  dynamips_i1_log.txt  dynamips_i2_log.txt  dynamips_i3_log.txt  dynamips_i4_log.txt  dynamips_i5_log.txt  dynamips_i6_log.txt
projeto_GNS3/project-files/dynamips/48c0968a-ffce-4250-bec0-be706c495ecb/: c2600_i3_log.txt  c2600_i3_nvram
projeto_GNS3/project-files/dynamips/48c0968a-ffce-4250-bec0-be706c495ecb/configs/: i3_startup-config.cfg
projeto_GNS3/project-files/dynamips/953949a2-02b3-4349-957b-14c6ea2a570a/: c2600_i2_log.txt  c2600_i2_nvram
projeto_GNS3/project-files/dynamips/953949a2-02b3-4349-957b-14c6ea2a570a/configs/: i2_startup-config.cfg
projeto_GNS3/project-files/dynamips/9feedb66-e6c6-4951-b943-ebb18b1e1aff/: c2600_i1_log.txt  c2600_i1_nvram
projeto_GNS3/project-files/dynamips/9feedb66-e6c6-4951-b943-ebb18b1e1aff/configs/: i1_startup-config.cfg
(+2 files in other folders)
